[gd_scene load_steps=5 format=3 uid="uid://ciompi4txp7t1"]

[ext_resource type="Texture2D" uid="uid://dogiu7mlvd4ie" path="res://equations.png" id="1"]
[ext_resource type="Script" path="res://bezier_demo.gd" id="2"]
[ext_resource type="Script" path="res://bezier.gd" id="3"]
[ext_resource type="Script" path="res://MyBezier.gd" id="4_u8f6f"]

[node name="bezier_demo" type="Node2D"]
script = ExtResource("2")

[node name="equations" type="Sprite2D" parent="."]
visible = false
position = Vector2(210, 70)
texture = ExtResource("1")
centered = false

[node name="curves" type="Node2D" parent="."]

[node name="cubic" type="Node2D" parent="curves"]
visible = false
script = ExtResource("3")
offset = 29.0

[node name="point_1" type="Marker2D" parent="curves/cubic"]
position = Vector2(377, 234)

[node name="A" type="Label" parent="curves/cubic/point_1"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "A"

[node name="point_2" type="Marker2D" parent="curves/cubic"]
position = Vector2(505, 476)

[node name="cA" type="Label" parent="curves/cubic/point_2"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "cA"

[node name="point_3" type="Marker2D" parent="curves/cubic"]
position = Vector2(706, 153)

[node name="cB" type="Label" parent="curves/cubic/point_3"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "cB"

[node name="point_4" type="Marker2D" parent="curves/cubic"]
position = Vector2(760, 560)

[node name="B" type="Label" parent="curves/cubic/point_4"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "B"

[node name="ui" type="VBoxContainer" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 272.0
offset_bottom = 56.0

[node name="mode" type="Button" parent="ui"]
layout_mode = 2
toggle_mode = true
text = "Auto"

[node name="offset" type="HSlider" parent="ui"]
layout_mode = 2
value = 50.0
editable = false

[node name="t0" type="Label" parent="ui/offset"]
layout_mode = 0
offset_left = -11.1131
offset_top = 1.79243
offset_right = -3.11307
offset_bottom = 15.7924
size_flags_vertical = 0
mouse_filter = 1
text = "0"

[node name="t1" type="Label" parent="ui/offset"]
layout_mode = 0
offset_left = 257.034
offset_top = 1.79243
offset_right = 267.034
offset_bottom = 15.7924
size_flags_vertical = 0
mouse_filter = 1
text = "1"

[node name="Equations" type="Sprite2D" parent="."]
visible = false
position = Vector2(1331, 623)
texture = ExtResource("1")

[node name="Bezier" type="Node2D" parent="."]
script = ExtResource("4_u8f6f")

[node name="point_1" type="Marker2D" parent="Bezier"]
position = Vector2(289, 466)

[node name="A" type="Label" parent="Bezier/point_1"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "A"
metadata/_edit_lock_ = true

[node name="point_2" type="Marker2D" parent="Bezier"]
position = Vector2(403, 194)

[node name="B" type="Label" parent="Bezier/point_2"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "B"
metadata/_edit_lock_ = true

[node name="point_3" type="Marker2D" parent="Bezier"]
position = Vector2(677, 195)

[node name="C" type="Label" parent="Bezier/point_3"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "C"
metadata/_edit_lock_ = true

[node name="point_4" type="Marker2D" parent="Bezier"]
position = Vector2(792, 473)

[node name="D" type="Label" parent="Bezier/point_4"]
offset_left = -5.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = -11.0
size_flags_vertical = 0
mouse_filter = 1
text = "D"
metadata/_edit_lock_ = true

[connection signal="toggled" from="ui/mode" to="." method="_on_mode_toggled"]
[connection signal="value_changed" from="ui/offset" to="." method="_on_offset_value_changed"]
